<resources>
    <string name="app_name">NUMAD24Fa_LiuyiYang</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="plus">\u002B</string>
    <string name="minus">\u2212</string>
    <!--    <string name="multiply">\u00D7</string>-->
    <!--    <string name="divide">\u00F7</string>-->

    <string name="equal_sign">\u003D</string>
    <string name="delete_last_char"> DEL </string>

    <string name="num_placeholder">CALC</string>

</resources>