<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuicCalc">


    <View
        android:id="@+id/viewDisplayBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/display_background"

        app:layout_constraintBottom_toTopOf="@id/viewDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.4"
        />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/divider"
        app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewDisplayBg" />


    <TextView
        android:id="@+id/textInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="start"
        android:text="@string/num_placeholder"
        android:textColor="@color/primary_text"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/viewDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.5"
         />


    <TableLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/buttons_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.6">


        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/buttonOne"
                style="@style/CalculatorButton"
                android:text="@string/one" />

            <Button
                android:id="@+id/buttonTwo"
                style="@style/CalculatorButton"
                android:text="@string/two" />

            <Button
                android:id="@+id/buttonThree"
                style="@style/CalculatorButton"
                android:text="@string/three" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/buttonFour"
                style="@style/CalculatorButton"
                android:text="@string/four" />

            <Button
                android:id="@+id/buttonFive"
                style="@style/CalculatorButton"
                android:text="@string/five" />

            <Button
                android:id="@+id/buttonSix"
                style="@style/CalculatorButton"
                android:text="@string/six" />
        </TableRow>


        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/buttonSeven"
                style="@style/CalculatorButton"
                android:text="@string/seven" />

            <Button
                android:id="@+id/buttonEight"
                style="@style/CalculatorButton"
                android:text="@string/eight" />

            <Button
                android:id="@+id/buttonNine"
                style="@style/CalculatorButton"
                android:text="@string/nine" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/buttonPlus"
                style="@style/ActionButton"
                android:text="@string/plus" />

            <Button
                android:id="@+id/buttonZero"
                style="@style/CalculatorButton"
                android:text="@string/zero" />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/ActionButton"
                android:text="@string/minus" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/buttonDeleteNum"
                style="@style/NumDelText"
                android:text="@string/delete_last_char" />

            <Button
                android:id="@+id/buttonEqual"
                style="@style/ActionButton"
                android:text="@string/equal_sign" />
        </TableRow>


    </TableLayout>



    <!--    <TableRow-->
    <!--        android:layout_width="280dp"-->
    <!--        android:layout_height="209dp"-->
    <!--        tools:layout_editor_absoluteX="55dp"-->
    <!--        tools:layout_editor_absoluteY="261dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>